crates/tsuno-driver/tests/fixtures/snapshots/pass/unsafe_block_resource_assert.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS unsafe_block_resource_assert
  all assertions discharged
PASS main
  all assertions discharged

stderr:
