crates/tsuno-driver/tests/fixtures/snapshots/pass/unsafe_block_resource_assert_points_to_sugar_single_tuple.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: result
---
status: Some(0)
stdout:
PASS unsafe_block_resource_assert_points_to_sugar_single_tuple
  all assertions discharged
PASS main
  all assertions discharged

stderr:
