crates/tsuno-driver/tests/fixtures/snapshots/pass/unsafe_fn_call_inside_unsafe.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS unsafe_callee
  all assertions discharged
PASS unsafe_fn_call_inside_unsafe
  all assertions discharged
PASS main
  all assertions discharged

stderr:
