crates/tsuno-driver/tests/fixtures/snapshots/pass/unsafe_function_raw_contract_own_i32.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 116
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS preserves_i32_own
  all assertions discharged
PASS main
  all assertions discharged

stderr:
