crates/tsuno-driver/tests/fixtures/snapshots/pass/unsafe_function_raw_ens_result.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: result
---
status: Some(0)
stdout:
PASS choose_ptr
  all assertions discharged
PASS unsafe_function_raw_ens_result
  all assertions discharged
PASS main
  all assertions discharged

stderr:
